--- a/book/asciidoc/shakespearean-templates.asciidoc
+++ b/book/asciidoc/shakespearean-templates.asciidoc
@@ -513,6 +513,11 @@ In that last example, we put an href attribute on the "a" tag. Let's elaborate o
   you could use +<p :isRed:style="color:red">+. (This also works for class names, e.g.,
   +<p :isCurrent:.current>+ will set the class +current+ is +isCurrent+ is +True+.)
 
+* Arbitrary key-value pairs can also be interpolated using the +*{…}+ syntax. The 
+  interpolated variable must be a tuple, or list of tuples, of Text or String. 
+  For example: if we have a variable +attrs = [("foo", "bar")]+, we could interpolate 
+  that into an element like: +<p *{attrs}>+ to get +<p foo="bar">+.
+
 ===== Conditionals
 
 Eventually, you'll want to put in some logic in your page. The goal of Hamlet
