--- a/book/asciidoc/authentication-and-authorization.asciidoc
+++ b/book/asciidoc/authentication-and-authorization.asciidoc
@@ -64,7 +64,12 @@ of the benefits of a declarative authorization system.
 
 === Authenticate Me
 
-Let's jump right in with an example of authentication.
+Let's jump right in with an example of authentication. For the Google oAuth authentication to work you should follow these steps:
+
+1. Read on [Google Developers Help](https://developers.google.com/identity/protocols/OAuth2) how to obtain OAuth 2.0 credentials such as a client ID and client secret that are known to both Google and your application.
+2. Set `Authorized redirect URIs` to `http://localhost:3000/auth/page/googleemail2/complete`.
+3. Enable `Google+ API` and `Contacts API`.
+4. Once you have the `clientId` and `secretId`, replace them in the code below.
 
 [source, haskell]
 ----
@@ -79,7 +84,16 @@ import           Network.HTTP.Client.Conduit (Manager, newManager)
 import           Yesod
 import           Yesod.Auth
 import           Yesod.Auth.BrowserId
-import           Yesod.Auth.GoogleEmail
+import           Yesod.Auth.GoogleEmail2
+
+
+-- Replace with Google client ID.
+clientId :: Text
+clientId = ""
+
+-- Replace with Google secret ID.
+clientSecret :: Text
+clientSecret = ""
 
 data App = App
     { httpManager :: Manager
@@ -104,7 +118,7 @@ instance YesodAuth App where
 
     authPlugins _ =
         [ authBrowserId def
-        , authGoogleEmail
+        , authGoogleEmail clientId clientSecret
         ]
 
     authHttpManager = httpManager
