Add PATCH method: Indicates Yesod supports it
PATCH has become popular in the recent years and having it in the
chapter would make it more complete. Also I had a feeling that PATCH
wasn't support by Yesod after reading this chapter.

--- a/book/asciidoc/restful-content.asciidoc
+++ b/book/asciidoc/restful-content.asciidoc
@@ -38,6 +38,9 @@ bank account to another.
 +PUT+:: Create a new resource on the server, or replace an existing one. This
 method _is_ safe to be called multiple times.
 
++PATCH+:: Updates the resource partially on the server. When you want
+to update one or more field of the resource, this method should be preferred.
+
 +DELETE+:: Just like it sounds: wipe out a resource on the server. Calling
 multiple times should be OK.
 
