--- a/book/asciidoc/yesod-for-haskellers.asciidoc
+++ b/book/asciidoc/yesod-for-haskellers.asciidoc
@@ -194,7 +194,7 @@ still well supported in the WAI ecosystem, via the wai-conduit helper package.
 
 Another common requirement when dealing with a streaming response is safely
 allocating a scarce resource- such as a file handle. By *safely*, I mean
-ensuring that the response will be released, even in the case of some
+ensuring that the resource will be released, even in the case of some
 exception. This is where the continuation passing style mentioned above comes
 into play:
 
