--- a/book/asciidoc/persistent.asciidoc
+++ b/book/asciidoc/persistent.asciidoc
@@ -46,7 +46,7 @@ Persistent on its own.
 
 === Synopsis
 
-The required dependencies for the below is: persistent, persistent-sqlite and persistent-template.
+The required dependencies for the below are: persistent, persistent-sqlite and persistent-template.
 
 
 [source, haskell]
