--- a/book/asciidoc/web-application-interface.asciidoc
+++ b/book/asciidoc/web-application-interface.asciidoc
@@ -51,7 +51,7 @@ by some applications that skip the framework entirely, including Hoogle.
 NOTE: Yesod provides an alternate approach for a devel server, known as _yesod
 devel_. The difference from wai-handler-devel is that yesod devel actually
 compiles your code each time, respecting all settings in your cabal file. This
-is the recommended aproach for general Yesod development.
+is the recommended approach for general Yesod development.
 
 === The Interface
 
