--- a/book/asciidoc/shakespearean-templates.asciidoc
+++ b/book/asciidoc/shakespearean-templates.asciidoc
@@ -1008,7 +1008,7 @@ Some quick points about this simple example:
 * Also, there are longer names for these quasiquoters (+ltext+ and +stext+).
 
 * The syntax for variable interpolation for Text.Shakespeare.Text is the same
-  as described above.  Note that +^{..}+ and +@{..}+ are also recognized in
+  as described above.  Note that +\^{..}+ and +@{..}+ are also recognized in
   +lt+ and +st+. If the output of a template should contain +^{..}+, a
   backslash can be used to prevent the interpolation,
   e.g. +[lt|2^\{23}|]+. The backslash is removed from the resulting text.
